footer is stable

--- a/spinning-reel/src/app/about/about.component.html
+++ b/spinning-reel/src/app/about/about.component.html
@@ -21,7 +21,7 @@
             beach.</p>
           <div class="margin-top margin-medium">
             <div class="button-row">
-              <a href="booking.html"
+              <a routerLink="/booking"
                  class="button w-button">Book now</a>
             </div>
           </div>
