--- a/spinning-reel/src/app/header-bar/header-bar.component.html
+++ b/spinning-reel/src/app/header-bar/header-bar.component.html
@@ -38,16 +38,16 @@
           </div>
           <nav role="navigation"
                class="navbar_menu w-nav-menu">
-            <a href="#"
+            <a routerLink="/home"
                class="navbar_logo-link-menu w-nav-brand"><img src="../../assets/img/company-logo.svg"
                    loading="lazy"
                    alt=""></a>
-            <a href="accommodation.html"
+            <a routerLink="/accommodation"
                class="navbar_link w-nav-link">Accommodation</a>
-            <a href="contact.html"
+            <a routerLink="/contact"
                class="navbar_link w-nav-link">Contact</a>
             <div class="header_contact-wrapper show-tablet">
-              <a href="#"
+              <a routerLink="/home"
                  class="contact-link w-inline-block">
                 <img src="../../assets/img/email.svg"
                      loading="lazy"
@@ -55,7 +55,7 @@
                      class="icon-1x1-xsmall">
                 <div>info@spinningreel.co.za</div>
               </a>
-              <a href="#"
+              <a routerLink="/home"
                  class="contact-link w-inline-block"><img src="../../assets/img/phone.svg"
                      loading="lazy"
                      alt=""
@@ -64,7 +64,7 @@
               </a>
             </div>
           </nav>
-          <a href="index.html"
+          <a routerLink="/home"
              aria-current="page"
              class="navbar_logo-link w-nav-brand w--current">
             <img src="../../assets/img/Logo-markwhite.svg"
@@ -76,7 +76,7 @@
                  alt=""
                  class="navbar_logo"></a>
           <a id="w-node-c0bfe2f6-aa6a-e672-5442-1cf2def242bf-def242ac"
-             href="booking.html"
+             routerLink="/booking"
              class="button is-navbar-button w-button">Book Now</a>
           <div class="navbar_menu-background"></div>
         </div>
@@ -97,7 +97,7 @@
             <div class="button-row">
               <a data-w-id="8fc1ff58-206c-b3e1-bdf8-2c7da251f899"
                  style="opacity:0"
-                 href="booking.html"
+                 routerLink="/booking"
                  class="button is-alternate w-button">Book now</a>
             </div>
           </div>
