--- a/spinning-reel/src/app/pages/privacy-policy.html
+++ b/spinning-reel/src/app/pages/privacy-policy.html
@@ -203,25 +203,25 @@
         </div>
         <nav role="navigation"
              class="navbar_menu w-nav-menu">
-          <a href="#"
+          <a routerLink="/home"
              class="navbar_logo-link-menu w-nav-brand"><img src="images/company-logo.svg"
                  loading="lazy"
                  alt=""></a>
-          <a href="accommodation.html"
-             class="navbar_link text-color-black w-nav-link">Accomodation</a>
-          <a href="contact.html"
+          <a routerLink="/accommodation"
+             class="navbar_link text-color-black w-nav-link">Accommodation</a>
+          <a routerLink="/contact"
              class="navbar_link text-color-black w-nav-link">Contact</a>
-          <a href="#"
+          <a routerLink="/home"
              class="navbar_tablet-menu-button w-button">Button</a>
           <div class="header_contact-wrapper show-tablet">
-            <a href="#"
+            <a routerLink="/home"
                class="contact-link w-inline-block"><img src="images/email.svg"
                    loading="lazy"
                    alt=""
                    class="icon-1x1-xsmall">
               <div>info@spinningreel.co.za</div>
             </a>
-            <a href="#"
+            <a routerLink="/home"
                class="contact-link w-inline-block"><img src="images/phone.svg"
                    loading="lazy"
                    alt=""
@@ -230,7 +230,7 @@
             </a>
           </div>
         </nav>
-        <a href="index.html"
+        <a routerLink="/home"
            class="navbar_logo-link w-nav-brand"><img src="images/Logo-markwhite.svg"
                loading="lazy"
                alt=""
@@ -241,14 +241,14 @@
         <div style="opacity:0"
              class="navbar_menu-background"></div>
         <div class="header_contact-wrapper is-booking">
-          <a href="#"
+          <a routerLink="/home"
              class="contact-link w-inline-block"><img src="images/email.svg"
                  loading="lazy"
                  alt=""
                  class="icon-1x1-xsmall">
             <div>info@spinningreel.co.za</div>
           </a>
-          <a href="#"
+          <a routerLink="/home"
              class="contact-link w-inline-block"><img src="images/phone.svg"
                  loading="lazy"
                  alt=""
@@ -338,7 +338,7 @@
                 <div class="w-layout-grid footer_top-wrapper">
                   <div class="footer_left-wrapper">
                     <div class="margin-bottom margin-medium">
-                      <a href="index.html"
+                      <a routerLink="/home"
                          class="footer_logo-link w-nav-brand"><img src="images/Logo.svg"
                              loading="lazy"
                              alt="Spinning Reel logo"></a>
@@ -374,7 +374,7 @@
                       </div>
                     </div>
                     <div class="w-layout-grid footer_social-list">
-                      <a href="#"
+                      <a routerLink="/home"
                          class="footer_social-link w-inline-block">
                         <div class="social-icon w-embed"><svg width="24"
                                height="24"
@@ -385,7 +385,7 @@
                                   fill="CurrentColor"></path>
                           </svg></div>
                       </a>
-                      <a href="#"
+                      <a routerLink="/home"
                          class="footer_social-link w-inline-block">
                         <div class="social-icon w-embed"><svg width="24"
                                height="24"
@@ -402,11 +402,11 @@
                   </div>
                   <div class="w-layout-grid footer_menu-wrapper">
                     <div class="footer_link-list">
-                      <a href="accommodation.html"
+                      <a routerLink="/accommodation"
                          class="footer_link">Accommodation</a>
-                      <a href="booking.html"
+                      <a routerLink="/booking"
                          class="footer_link">Booking</a>
-                      <a href="contact.html"
+                      <a routerLink="/contact"
                          class="footer_link">Contact</a>
                     </div>
                   </div>
