Header bar adjustments

--- a/spinning-reel/src/app/accommodation/accommodation-page/accommodation-page.component.html
+++ b/spinning-reel/src/app/accommodation/accommodation-page/accommodation-page.component.html
@@ -1,4 +1,4 @@
-<app-header-bar-page></app-header-bar-page>
+<app-header-bar></app-header-bar>
 <section class="accommodation-section-type">
   <div class="page-padding">
     <div class="container-large">
