--- a/spinning-reel/src/app/accommodation/accommodation.component.html
+++ b/spinning-reel/src/app/accommodation/accommodation.component.html
@@ -1,4 +1,4 @@
-<app-header-bar-page></app-header-bar-page>
+<app-header-bar></app-header-bar>
 <div class="container-large">
   <div class="padding-vertical padding-xhuge">
     <div class="home-accommodation_component">
@@ -12,7 +12,8 @@
                 <img src=""
                      loading="lazy"
                      alt=""
-                     class="home-accommodation_image"></div>
+                     class="home-accommodation_image">
+              </div>
               <div class="home-accommodation_hover-wrapper">
                 <div class="accommodation-description-wrapper">
                   <div class="margin-bottom margin-xxsmall">
@@ -47,17 +48,20 @@
               <div data-w-id="2a7e2d12-809b-5f47-024f-d488e7f44624"
                    style="opacity:0"
                    class="home-accommodation_options-item-wrapper">
-                <div class="home-accommodation_options-item-image-wrapper"><img src=""
+                <div class="home-accommodation_options-item-image-wrapper">
+                  <img src=""
                        loading="lazy"
                        alt=""
-                       class="home-accommodation_options-item-image"></div>
+                       class="home-accommodation_options-item-image">
+                </div>
                 <div class="home-accommodation_options-item-description-wrapper">
                   <div class="margin-bottom margin-xxsmall">
                     <h4></h4>
                   </div>
                   <a routerLink="/home"
                      class="button-link with-icon w-inline-block">
-                    <div>view</div><img src="../../assets/img/Chevron-Right.svg"
+                    <div>view</div>
+                    <img src="../../assets/img/Chevron-Right.svg"
                          loading="lazy"
                          alt=""
                          class="icon-xxsmall">
