--- a/spinning-reel/src/app/contact/contact.component.html
+++ b/spinning-reel/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<app-header-bar-page></app-header-bar-page>
+<app-header-bar [isSummary]="true"></app-header-bar>
 <section class="contact-section-contact">
   <div class="page-padding">
     <div class="container-large">
@@ -79,7 +79,7 @@
                      value="Submit"
                      data-wait="Please wait..."
                      id="w-node-_9e0979ad-a750-88c0-0ac5-cc17f22e4994-01a3cb55"
-                     class="button w-button">
+                     class="button">
             </form>
             <div class="success-message w-form-done">
               <div class="success-text">Thank you! Your submission has been received!</div>
