--- a/spinning-reel/src/app/home/home.component.html
+++ b/spinning-reel/src/app/home/home.component.html
@@ -5,7 +5,7 @@
         <app-description-wrapper></app-description-wrapper>
       </section>
       <section class="home-section-accommodation">
-        <app-accommodation></app-accommodation>
+        <!-- <app-accommodation></app-accommodation> -->
       </section>
       <section class="home-section-about">
         <app-about></app-about>
