--- a/spinning-reel/src/app/booking/booking.component.html
+++ b/spinning-reel/src/app/booking/booking.component.html
@@ -1,4 +1,4 @@
-<app-header-bar-page></app-header-bar-page>
+<app-header-bar [isSummary]="true"></app-header-bar>
 <section class="booking-section-contact">
   <div class="page-padding">
     <div class="container-small">
@@ -20,8 +20,10 @@
                 data-name="Booking"
                 method="get"
                 class="booking-contact_form">
-            <div class="form-field-wrapper"><label for="Booking-Name"
-                     class="field-label">Name</label><input type="text"
+            <div class="form-field-wrapper">
+              <label for="Booking-Name"
+                     class="field-label">Name</label>
+              <input type="text"
                      class="form-input w-input"
                      autofocus="true"
                      maxlength="256"
@@ -29,10 +31,13 @@
                      data-name="Booking Name"
                      placeholder=""
                      id="Booking-Name"
-                     required=""></div>
+                     required="">
+            </div>
             <div class="form-field-2col is-mobile-1col">
-              <div class="form-field-wrapper"><label for="Booking-Email"
-                       class="field-label">Email</label><input type="email"
+              <div class="form-field-wrapper">
+                <label for="Booking-Email"
+                       class="field-label">Email</label>
+                <input type="email"
                        class="form-input w-input"
                        maxlength="256"
                        name="Booking-Email"
@@ -40,19 +45,24 @@
                        placeholder=""
                        id="Booking-Email"
                        required=""></div>
-              <div class="form-field-wrapper"><label for="Booking-Phone"
-                       class="field-label">Phone number</label><input type="tel"
+              <div class="form-field-wrapper">
+                <label for="Booking-Phone"
+                       class="field-label">Phone number</label>
+                <input type="tel"
                        class="form-input w-input"
                        maxlength="256"
                        name="Booking-Phone"
                        data-name="Booking Phone"
                        placeholder=""
                        id="Booking-Phone"
-                       required=""></div>
+                       required="">
+              </div>
             </div>
             <div class="form-field-2col is-mobile-1col">
-              <div class="form-field-wrapper"><label for="Booking-Adults"
-                       class="field-label">Adults</label><select id="Booking-Adults"
+              <div class="form-field-wrapper">
+                <label for="Booking-Adults"
+                       class="field-label">Adults</label>
+                <select id="Booking-Adults"
                         name="Booking-Adults"
                         data-name="Booking Adults"
                         required=""
@@ -64,9 +74,12 @@
                   <option value="5">5</option>
                   <option value="6">6</option>
                   <option value="7 or more">7 or more</option>
-                </select></div>
-              <div class="form-field-wrapper"><label for="Booking-Children"
-                       class="field-label">Children</label><select id="Booking-Children"
+                </select>
+              </div>
+              <div class="form-field-wrapper">
+                <label for="Booking-Children"
+                       class="field-label">Children</label>
+                <select id="Booking-Children"
                         name="Booking-Children"
                         data-name="Booking Children"
                         required=""
@@ -78,12 +91,15 @@
                   <option value="4">4</option>
                   <option value="5">5</option>
                   <option value="6 or more">6 or more</option>
-                </select></div>
+                </select>
+              </div>
             </div>
             <div class="form-field-2col is-mobile-1col">
-              <div class="form-field-wrapper"><label for="Booking-Adults-2"
+              <div class="form-field-wrapper">
+                <label for="Booking-Adults-2"
                        class="field-label">Arrival Date</label>
-                <div class="form-input-date-wrapper"><input type="text"
+                <div class="form-input-date-wrapper">
+                  <input type="text"
                          class="form-input-date w-input"
                          autocomplete="off"
                          maxlength="256"
@@ -92,14 +108,18 @@
                          placeholder="Select Date"
                          data-toggle="datepicker"
                          id="Booking-Arrival-Date"
-                         required=""><img loading="lazy"
+                         required="">
+                  <img loading="lazy"
                        src="../../assets/img/calendar.svg"
                        alt=""
-                       class="date-field-icon"></div>
+                       class="date-field-icon">
+                </div>
               </div>
-              <div class="form-field-wrapper"><label for="Booking-Children-2"
+              <div class="form-field-wrapper">
+                <label for="Booking-Children-2"
                        class="field-label">Departure Date</label>
-                <div class="form-input-date-wrapper"><input type="text"
+                <div class="form-input-date-wrapper">
+                  <input type="text"
                          class="form-input-date w-input"
                          autocomplete="off"
                          maxlength="256"
@@ -108,30 +128,36 @@
                          placeholder="Select Date"
                          data-toggle="datepicker"
                          id="Booking-Departure-Date"
-                         required=""><img loading="lazy"
+                         required="">
+                  <img loading="lazy"
                        src="../../assets/img/calendar.svg"
                        alt=""
-                       class="date-field-icon"></div>
+                       class="date-field-icon">
+                </div>
               </div>
             </div>
-            <div class="form-field-wrapper"><label for="Booking-Special-Requests"
-                     class="field-label">Special Requests</label><textarea id="Booking-Special-Requests"
+            <div class="form-field-wrapper">
+              <label for="Booking-Special-Requests"
+                     class="field-label">Special Requests</label>
+              <textarea id="Booking-Special-Requests"
                         name="Booking-Special-Requests"
                         maxlength="5000"
                         data-name="Booking Special Requests"
                         placeholder="Type your message..."
-                        class="form-input is-text-area w-input"></textarea></div>
+                        class="form-input is-text-area w-input"></textarea>
+            </div>
             <div class="margin-bottom margin-xsmall">
               <div class="recaptcha-wrapper">
                 <div
                      class="w-form-formrecaptcha g-recaptcha g-recaptcha-error g-recaptcha-disabled g-recaptcha-invalid-key">
                 </div>
               </div>
-            </div><input type="submit"
+            </div>
+            <input type="submit"
                    data-wait="Please wait..."
                    value="Submit"
                    id="w-node-_6ac914a1-f8eb-52af-3d73-69de529a486c-80bc6bf9"
-                   class="button w-button">
+                   class="button">
           </form>
           <div class="success-message w-form-done">
             <div class="success-text">Thank you! Your submission has been received!</div>
