--- a/spinning-reel/src/app/header-bar/header-bar.component.html
+++ b/spinning-reel/src/app/header-bar/header-bar.component.html
@@ -1,6 +1,6 @@
 <header class="home-section-header">
   <div class="home-header_component">
-    <div data-w-id="a795c0f3-fd5f-5b8f-3ab3-7f2f9b524d52"
+    <div #shortContacts
          class="header_contact-wrapper">
       <a href="mailto:info@spinningreel.co.za?subject=Info"
          class="contact-link w-inline-block">
@@ -11,7 +11,8 @@
         <div>info@spinningreel.co.za</div>
       </a>
       <a href="tel:+270466244281"
-         class="contact-link w-inline-block"><img src="../../assets/img/phone.svg"
+         class="contact-link w-inline-block">
+        <img src="../../assets/img/phone.svg"
              loading="lazy"
              alt=""
              class="icon-1x1-xsmall">
@@ -19,52 +20,53 @@
       </a>
     </div>
     <div class="container-large">
-      <div data-collapse="medium"
-           data-animation="over-left"
-           data-duration="400"
-           data-w-id="c0bfe2f6-aa6a-e672-5442-1cf2def242ac"
-           data-easing="ease"
-           data-easing2="ease"
-           role="banner"
-           class="navbar_component w-nav">
+      <div class="navbar_component">
         <div class="navbar_container">
-          <div id="w-node-c0bfe2f6-aa6a-e672-5442-1cf2def242ae-def242ac"
-               class="navbar_menu-button w-nav-button">
-            <div class="menu-icon">
-              <div class="menu-icon_line-top"></div>
-              <div class="menu-icon_line-middle"></div>
-              <div class="menu-icon_line-bottom"></div>
-            </div>
-          </div>
-          <nav role="navigation"
-               class="navbar_menu w-nav-menu">
+          <input title="toggle"
+                 type="checkbox"
+                 [checked]="isChecked"
+                 (change)="navToggle()"
+                 id="nav-toggle"
+                 class="nav-toggle" />
+          <nav>
             <a routerLink="/home"
-               class="navbar_logo-link-menu w-nav-brand"><img src="../../assets/img/company-logo.svg"
+               (click)="navToggle()"
+               class="navbar_logo-link-menu w-nav-brand">
+              <img src="../../assets/img/company-logo.svg"
                    loading="lazy"
-                   alt=""></a>
-            <a routerLink="/accommodation"
+                   alt="">
+            </a>
+            <a [ngClass]="isSummary ? 'text-color-black' : ''"
+               routerLink="/accommodation"
+               (click)="navToggle()"
                class="navbar_link w-nav-link">Accommodation</a>
-            <a routerLink="/contact"
+            <a [ngClass]="isSummary ? 'text-color-black' : ''"
+               routerLink="/contact"
+               (click)="navToggle()"
                class="navbar_link w-nav-link">Contact</a>
-            <div class="header_contact-wrapper show-tablet">
-              <a routerLink="/home"
-                 class="contact-link w-inline-block">
-                <img src="../../assets/img/email.svg"
-                     loading="lazy"
-                     alt=""
-                     class="icon-1x1-xsmall">
-                <div>info@spinningreel.co.za</div>
-              </a>
-              <a routerLink="/home"
-                 class="contact-link w-inline-block"><img src="../../assets/img/phone.svg"
-                     loading="lazy"
-                     alt=""
-                     class="icon-1x1-xsmall">
-                <div>+27 (046) 624 4281</div>
-              </a>
-            </div>
           </nav>
-          <a routerLink="/home"
+
+          <label for="nav-toggle"
+                 class="nav-toggle-label">
+            <span></span>
+          </label>
+
+          <a *ngIf="isSummary"
+             routerLink="/home"
+             aria-current="page"
+             class="navbar_logo-link w-nav-brand w--current">
+            <img src="../../assets/img/svg/Logo-markblack.svg"
+                 loading="lazy"
+                 alt=""
+                 class="navbar_logo">
+            <img src="../../assets/img/svg/Logo.svg"
+                 loading="lazy"
+                 alt=""
+                 class="navbar_logo">
+          </a>
+
+          <a *ngIf="!isSummary"
+             routerLink="/home"
              aria-current="page"
              class="navbar_logo-link w-nav-brand w--current">
             <img src="../../assets/img/Logo-markwhite.svg"
@@ -74,31 +76,25 @@
             <img src="../../assets/img/Logowhite.svg"
                  loading="lazy"
                  alt=""
-                 class="navbar_logo"></a>
-          <a id="w-node-c0bfe2f6-aa6a-e672-5442-1cf2def242bf-def242ac"
+                 class="navbar_logo">
+          </a>
+          <a *ngIf="!isSummary" #buttonBookNow
              routerLink="/booking"
-             class="button is-navbar-button w-button">Book Now</a>
-          <div class="navbar_menu-background"></div>
+             class="button is-navbar-button">Book Now</a>
         </div>
       </div>
-      <div class="home-header_content-wrapper">
+      <div [ngClass]="isSummary ? 'hide' : 'home-header_content-wrapper'">
         <div class="padding-vertical padding-xhuge">
           <div class="margin-bottom margin-xxsmall">
-            <h4 data-w-id="8fc1ff58-206c-b3e1-bdf8-2c7da251f891"
-                style="opacity:0"
-                class="text-color-white">Port Alfred</h4>
+            <h4 class="text-color-white">Port Alfred</h4>
           </div>
           <div class="margin-bottom margin-small">
-            <h1 data-w-id="59a9d132-b46a-44e0-5ac2-867e3ff26fa5"
-                style="opacity:0"
-                class="text-color-white">Secluded beach cottages</h1>
+            <h1 class="text-color-white">Secluded beach cottages</h1>
           </div>
           <div class="margin-top margin-medium">
             <div class="button-row">
-              <a data-w-id="8fc1ff58-206c-b3e1-bdf8-2c7da251f899"
-                 style="opacity:0"
-                 routerLink="/booking"
-                 class="button is-alternate w-button">Book now</a>
+              <a routerLink="/booking"
+                 class="button is-alternate">Book now</a>
             </div>
           </div>
         </div>
@@ -106,32 +102,10 @@
           <div class="home-header_overlay-wrapper">
             <div class="home-header_overlay"></div>
           </div>
-          <div data-poster-url="https://uploads-ssl.webflow.com/62e3fdb8dc5ed3467ecf3726/63071231dc776cb3068cc3d4_Spinning reel home-poster-00001.jpg"
-               data-video-urls="https://uploads-ssl.webflow.com/62e3fdb8dc5ed3467ecf3726/63071231dc776cb3068cc3d4_Spinning reel home-transcode.mp4,https://uploads-ssl.webflow.com/62e3fdb8dc5ed3467ecf3726/63071231dc776cb3068cc3d4_Spinning reel home-transcode.webm"
-               data-autoplay="true"
-               data-loop="true"
-               data-wf-ignore="true"
-               class="home-header_background-video w-background-video w-background-video-atom"><video
-                   id="d1d60e91-6993-0220-c8f9-278a60a89a83-video"
-                   autoplay=""
-                   loop=""
-                   style="background-image:url(&quot;https://uploads-ssl.webflow.com/62e3fdb8dc5ed3467ecf3726/63071231dc776cb3068cc3d4_Spinning reel home-poster-00001.jpg&quot;)"
-                   muted=""
-                   playsinline=""
-                   data-wf-ignore="true"
-                   data-object-fit="cover">
-              <source src="https://uploads-ssl.webflow.com/62e3fdb8dc5ed3467ecf3726/63071231dc776cb3068cc3d4_Spinning reel home-transcode.mp4"
-                      data-wf-ignore="true">
-              <source src="https://uploads-ssl.webflow.com/62e3fdb8dc5ed3467ecf3726/63071231dc776cb3068cc3d4_Spinning reel home-transcode.webm"
-                      data-wf-ignore="true">
-            </video></div><img src="../../assets/img/Spinning-Reel-Beach.jpg"
+          <img src="../../assets/img/Spinning-Reel-Beach.jpg"
                loading="lazy"
-               data-w-id="8fc1ff58-206c-b3e1-bdf8-2c7da251f89d"
-               srcset="../../assets/img/Spinning-Reel-Beach-p-500.jpg 500w, ../../assets/img/Spinning-Reel-Beach-p-800.jpg 800w, ../../assets/img/Spinning-Reel-Beach-p-1080.jpg 1080w, ../../assets/img/Spinning-Reel-Beach-p-1600.jpg 1600w, ../../assets/img/Spinning-Reel-Beach.jpg 1920w"
-               sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 91vw, (max-width: 1439px) 93vw, 97vw"
                alt="A bird&#x27;s eye view of the beach and coast with Spinning Reel cottages just behind the sand dunes"
                class="home-header_background-image">
-          <div class="w-embed-youtubevideo"></div>
         </div>
       </div>
     </div>
