--- a/spinning-reel/src/app/header-bar/header-bar.component.scss
+++ b/spinning-reel/src/app/header-bar/header-bar.component.scss
@@ -1,7 +1,6 @@
 @use '../../styles/common.scss';
 @use '../../styles/component.scss';
 
-
 .home-header_component {
   position: relative;
 }
@@ -23,10 +22,6 @@
   grid-column-gap: 1rem;
 }
 
-.header_contact-wrapper.show-tablet {
-  display: none;
-}
-
 .header_contact-wrapper.is-booking {
   height: auto;
   margin-right: 0px;
@@ -46,6 +41,320 @@
   grid-row-gap: 1rem;
 }
 
+.navbar_component {
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  right: 0%;
+  bottom: auto;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  max-width: 80rem;
+  min-height: 4.5rem;
+  margin-top: 4.5rem;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 1.25rem;
+  padding-left: 1.25rem;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background-color: transparent;
+}
+
+.navbar_component.is-booking {
+  margin-top: 1.5rem;
+  padding-right: 3rem;
+  padding-left: 3rem;
+}
+
+.home-header_content-wrapper {
+  z-index: 2;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100vh;
+  max-height: 60rem;
+  min-height: 37.5rem;
+  padding-right: 2.5rem;
+  padding-left: 2.5rem;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.home-header_background-wrapper {
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  right: 0%;
+  bottom: 0%;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+.nav-toggle {
+  position: absolute !important;
+  top: -9999px !important;
+  left: -9999px !important;
+}
+
+.nav-toggle:checked~nav {
+  transform: scale(1, 1);
+}
+
+.nav-toggle:checked~nav a {
+  opacity: 1;
+  transition: opacity 250ms ease-in-out 250ms;
+}
+
+.nav-toggle-label {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-right: 0.9rem;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.nav-toggle-label span,
+.nav-toggle-label span::before,
+.nav-toggle-label span::after {
+  display: block;
+  background: white;
+  height: 0.1rem;
+  width: 1.5rem;
+  border-radius: 2px;
+  position: relative;
+}
+
+.nav-toggle-label span::before,
+.nav-toggle-label span::after {
+  content: '';
+  position: absolute;
+}
+
+.nav-toggle-label span::before {
+  bottom: 0.5rem;
+}
+
+.nav-toggle-label span::after {
+  top: 0.5rem;
+}
+
+nav {
+  background-color: white;
+  position: absolute;
+  text-align: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: scale(1, 0);
+  transform-origin: top;
+  transition: transform 400ms ease-in-out;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+nav li {
+  margin-top: 0.6rem;
+  margin-bottom: 0.6rem;
+}
+
+nav a {
+  color: white;
+  text-decoration: none;
+  font-size: 1rem;
+  text-transform: uppercase;
+  transition: opacity 150ms ease-in-out;
+}
+
+nav a div {
+  width: 100%;
+  padding-top: 0.4rem;
+  padding-bottom: 0.4rem;
+}
+
+.navbar_logo-link {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding-left: 0rem;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  grid-row-gap: 0.5rem;
+}
+
+.navbar_logo-link-menu {
+  display: none;
+  padding-left: 0rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.home-header_background-image {
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  right: 0%;
+  bottom: 0%;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
+.navbar_container {
+  display: -ms-grid;
+  display: grid;
+  width: 100%;
+  height: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: start;
+  -webkit-align-items: start;
+  -ms-flex-align: start;
+  align-items: start;
+  grid-auto-columns: 1fr;
+  grid-column-gap: 0rem;
+  grid-row-gap: 0rem;
+  -ms-grid-columns: 1fr -webkit-max-content 1fr;
+  -ms-grid-columns: 1fr max-content 1fr;
+  grid-template-columns: 1fr -webkit-max-content 1fr;
+  grid-template-columns: 1fr max-content 1fr;
+  -ms-grid-rows: auto;
+  grid-template-rows: auto;
+}
+
+
+
+
+
+
+
+.navbar_menu-button {
+  padding: 0rem;
+}
+
+.navbar_tablet-menu-button {
+  display: none;
+  margin-left: 1rem;
+  padding: 0.5rem 1.5rem;
+  border: 1px solid #000;
+  background-color: #000;
+  color: #fff;
+}
+
+
+.navbar_menu {
+  margin-left: -1rem;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  color: #fff;
+}
+
+.navbar_menu-background {
+  position: static;
+  display: none;
+}
+
+.navbar_link {
+  padding: 0.5rem 1rem;
+  color: black;
+}
+
+.navbar_link:hover {
+  text-decoration: underline;
+}
+
+.navbar_link.w--current {
+  color: #fff;
+  text-decoration: none;
+}
+
+.navbar_link.w--current:hover {
+  text-decoration: underline;
+}
+
+.navbar_link.text-color-black {
+  color: #000;
+}
+
+.navbar_logo.is-inverted {
+  -webkit-filter: invert(100%);
+  filter: invert(100%);
+}
+
+
+
+.button.is-navbar-button {
+  margin-left: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  border-color: #fff;
+  -webkit-transition: all 250ms ease;
+  transition: all 250ms ease;
+  color: #fff;
+}
+
+.button.is-navbar-button:hover {
+  background-color: #fff;
+  color: #000;
+}
 
 @media screen and (min-width: 1280px) {
   .header_contact-wrapper.is-booking {
@@ -61,6 +370,12 @@
     align-items: center;
     grid-row-gap: 0rem;
   }
+
+  .navbar_component {
+    padding-right: 2.5rem;
+    padding-left: 2.5rem;
+  }
+
 }
 
 @media screen and (max-width: 991px) {
@@ -82,23 +397,293 @@
     align-items: flex-end;
     grid-row-gap: 1rem;
   }
+
+  .navbar_logo-link-menu {
+    position: static;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: 2.5rem;
+    margin-bottom: 2rem;
+    float: none;
+  }
+
+  .navbar_menu-button {
+    margin-left: -0.5rem;
+    padding: 0rem;
+  }
+
+  .navbar_menu-button.w--open {
+    background-color: transparent;
+  }
+
+  .navbar_tablet-menu-button {
+    display: inline-block;
+    width: 100%;
+    margin-top: 1.5rem;
+    margin-right: 0rem;
+    margin-left: 0rem;
+  }
+
+  .navbar3_dropdown-list {
+    position: static;
+    overflow: hidden;
+  }
+
+  .navbar3_dropdown-list.w--open {
+    position: static;
+    padding: 0px;
+    border-style: none;
+  }
+
+  .navbar_container {
+    display: -ms-grid;
+    display: grid;
+    grid-auto-columns: 1fr;
+  }
+
+  .navbar_menu {
+    left: 0%;
+    top: 0%;
+    right: auto;
+    bottom: 0%;
+    z-index: 1;
+    display: block;
+    overflow: auto;
+    width: 80vw;
+    margin-left: 0px;
+    padding-right: 5vw;
+    padding-bottom: 2.5rem;
+    padding-left: 5vw;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    border-right: 1px solid #000;
+    background-color: #fff;
+    background-clip: border-box;
+    -webkit-text-fill-color: inherit;
+  }
+
+  .navbar_menu-background {
+    position: absolute;
+    left: 0%;
+    top: 0%;
+    right: 0%;
+    bottom: 0%;
+    z-index: 0;
+    display: none;
+    width: 100vw;
+    height: 100vh;
+    padding-right: 0rem;
+    padding-bottom: 0rem;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+
+  .navbar_link {
+    position: static;
+    padding: 0.75rem 0rem;
+    font-size: 1.125rem;
+  }
+
+  .navbar3_dropdown-link {
+    padding: 0.75rem 0rem 0.75rem 5%;
+  }
+
+  .navbar3_menu-dropdown {
+    position: relative;
+    display: block;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    font-size: 1.125rem;
+  }
+
+  .navbar_logo {
+    max-height: 4rem;
+    max-width: 9rem;
+  }
+
+  .navbar3_dropdown-toggle {
+    position: relative;
+    width: 100%;
+    margin-right: 0rem;
+    margin-left: 0rem;
+    padding: 0.75rem 2rem 0.75rem 0rem;
+  }
+
 }
 
 @media screen and (max-width: 767px) {
+  .header_contact-wrapper {
+    position: static;
+    display: none;
+  }
+
+  .navbar_component {
+    min-height: 4rem;
+    margin-top: 3rem;
+  }
+
+  .home-header_background-wrapper {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  .home-header_background-image {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
+
   .home-section-header {
     padding-right: 2rem;
     padding-left: 2rem;
   }
+
+
+  .button.is-navbar-button {
+    padding: 1rem;
+  }
+
+  .nav-toggle-label {
+    display: none;
+  }
 }
 
+@media screen and (min-width: 479px) {
+  .nav-toggle-label {
+    display: none;
+  }
+
+  nav {
+    position: relative;
+    text-align: center;
+    transition: none;
+    transform: scale(1, 1);
+    background: none;
+    top: initial;
+    left: initial;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  nav ul {
+    display: flex;
+  }
+
+  nav li {
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-bottom: 0;
+  }
+
+  nav a {
+    opacity: 1;
+    position: relative;
+  }
+
+
+  nav a:hover::before {
+    transform: scale(1, 1);
+  }
+
+}
+
+
 @media screen and (max-width: 479px) {
+  .home-header_background-image {
+    padding-top: 0rem;
+    padding-bottom: 0rem;
+  }
+
+  .navbar_component {
+    margin-top: 0rem;
+  }
+
+  .home-header_content-wrapper {
+    padding-right: 1rem;
+    padding-left: 1rem;
+  }
+
+  .home-header_background-wrapper {
+    padding-top: 0rem;
+    padding-bottom: 0rem;
+  }
+
+
+
+
+
+
+
   .home-section-header {
     padding-right: 0rem;
     padding-left: 0rem;
   }
 
-  .header_contact-wrapper {
-    position: static;
+  .button.is-navbar-button {
     display: none;
   }
+
+  .navbar_container {
+    -ms-grid-columns: 1fr -webkit-max-content;
+    -ms-grid-columns: 1fr max-content;
+    grid-template-columns: 1fr -webkit-max-content;
+    grid-template-columns: 1fr max-content;
+  }
+
+  .navbar_menu-button {
+    margin-right: -0.5rem;
+    margin-left: 0rem;
+  }
+
+  .navbar_logo-link {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-align: end;
+    -webkit-align-items: flex-end;
+    -ms-flex-align: end;
+    align-items: flex-end;
+    grid-column-gap: 0.5rem;
+  }
+
+  .navbar_logo {
+    max-height: 2.5rem;
+    max-width: 11rem;
+  }
+
 }
