wrap up with errors

--- a/spinning-reel/src/app/booking/booking.component.html
+++ b/spinning-reel/src/app/booking/booking.component.html
@@ -110,7 +110,7 @@
                          id="Booking-Arrival-Date"
                          required="">
                   <img loading="lazy"
-                       src="../../assets/img/calendar.svg"
+                       src="../../assets/img/svg/calendar.svg"
                        alt=""
                        class="date-field-icon">
                 </div>
@@ -130,7 +130,7 @@
                          id="Booking-Departure-Date"
                          required="">
                   <img loading="lazy"
-                       src="../../assets/img/calendar.svg"
+                       src="../../assets/img/svg/calendar.svg"
                        alt=""
                        class="date-field-icon">
                 </div>
