--- a/spinning-reel/src/app/accommodation/accommodation.component.html
+++ b/spinning-reel/src/app/accommodation/accommodation.component.html
@@ -1,81 +1,9 @@
-<app-header-bar></app-header-bar>
+<app-header-bar *ngIf="isSummary"></app-header-bar>
 <div class="container-large">
   <div class="padding-vertical padding-xhuge">
-    <div class="home-accommodation_component">
-      <div class="home-accommodation_list-wrapper w-dyn-list">
-        <div role="list"
-             class="home-accommodation_list w-dyn-items">
-          <div role="listitem"
-               class="home-accommodation_item w-dyn-item">
-            <div class="home-accommodation_item-wrapper">
-              <div class="home-accommodation_image-wrapper">
-                <img src=""
-                     loading="lazy"
-                     alt=""
-                     class="home-accommodation_image">
-              </div>
-              <div class="home-accommodation_hover-wrapper">
-                <div class="accommodation-description-wrapper">
-                  <div class="margin-bottom margin-xxsmall">
-                    <h3 class="text-color-white"></h3>
-                  </div>
-                  <div class="text-color-white"></div>
-                </div>
-                <a routerLink="/home"
-                   class="button-link with-icon is-alternate w-inline-block">
-                  <div>view</div><img src="../../assets/img/Chevron-Right-White.svg"
-                       loading="lazy"
-                       alt=""
-                       class="icon-xxsmall">
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="w-dyn-empty">
-          <div>No items found.</div>
-        </div>
-      </div>
-      <div class="home-accommodation_options-wrapper">
-        <div class="margin-bottom margin-medium">
-          <h2>Accommodation options</h2>
-        </div>
-        <div class="home-accommodation_options-list-wrapper w-dyn-list">
-          <div role="list"
-               class="home-accommodation_options-list w-dyn-items">
-            <div role="listitem"
-                 class="home-accommodation_options-item w-dyn-item">
-              <div data-w-id="2a7e2d12-809b-5f47-024f-d488e7f44624"
-                   style="opacity:0"
-                   class="home-accommodation_options-item-wrapper">
-                <div class="home-accommodation_options-item-image-wrapper">
-                  <img src=""
-                       loading="lazy"
-                       alt=""
-                       class="home-accommodation_options-item-image">
-                </div>
-                <div class="home-accommodation_options-item-description-wrapper">
-                  <div class="margin-bottom margin-xxsmall">
-                    <h4></h4>
-                  </div>
-                  <a routerLink="/home"
-                     class="button-link with-icon w-inline-block">
-                    <div>view</div>
-                    <img src="../../assets/img/Chevron-Right.svg"
-                         loading="lazy"
-                         alt=""
-                         class="icon-xxsmall">
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="w-dyn-empty">
-            <div>No items found.</div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <h4>Situated in the heart of the Sunshine Coast, Spinning Reel offers a restful, comfortable and secluded holiday
+      break for families, romantic getaways, or a re-charging stopover for the weary traveler.</h4>
+    <app-accommodation-grid *ngIf="!isSummary"></app-accommodation-grid>
   </div>
 </div>
-<app-footer></app-footer>
+<app-footer *ngIf="isSummary"></app-footer>
