--- a/spinning-reel/src/app/attractions/attractions.component.html
+++ b/spinning-reel/src/app/attractions/attractions.component.html
@@ -23,12 +23,13 @@
           </div>
         </div>
         <div id="w-node-f4de3847-1b0b-d4a5-21e7-f0db5111ae0a-67cf3725"
-             class="home-attractions_image-wrapper"><img src="../../assets/img/Royal-Port-Alfred-Golf-course.jpg"
+             class="home-attractions_image-wrapper">
+          <img src="../../assets/img/Royal-Port-Alfred-Golf-course.jpg"
                loading="lazy"
-               srcset="../../assets/img/Royal-Port-Alfred-Golf-course-p-500.jpg 500w, ../../assets/img/Royal-Port-Alfred-Golf-course-p-800.jpg 800w, ../../assets/img/Royal-Port-Alfred-Golf-course-p-1080.jpg 1080w, ../../assets/img/Royal-Port-Alfred-Golf-course.jpg 1280w"
                alt="Bird&#x27;s eye view of the Royal Port Alfred Golf course with a man driving off the tee"
                sizes="(max-width: 479px) 93vw, (max-width: 767px) 92vw, (max-width: 991px) 43vw, (max-width: 1439px) 53vw, 51vw"
-               class="home-attractions_image"></div>
+               class="home-attractions_image">
+        </div>
       </div>
     </div>
   </div>
