--- a/spinning-reel/src/app/contact/contact.component.html
+++ b/spinning-reel/src/app/contact/contact.component.html
@@ -12,14 +12,16 @@
             </div>
             <div class="contact-contact_contact-list">
               <a href="mailto:info@spinningreel.co.za?subject=Info"
-                 class="contact-link w-inline-block"><img src="../../assets/img/email.svg"
+                 class="contact-link w-inline-block">
+                 <img src="../../assets/img/svg/email.svg"
                      loading="lazy"
                      alt=""
                      class="icon-1x1-xsmall">
                 <div>info@spinningreel.co.za</div>
               </a>
               <a href="tel:+270466244281"
-                 class="contact-link w-inline-block"><img src="../../assets/img/phone.svg"
+                 class="contact-link w-inline-block">
+                 <img src="../../assets/img/svg/phone.svg"
                      loading="lazy"
                      alt=""
                      class="icon-1x1-xsmall">
@@ -28,7 +30,8 @@
               <a href="https://g.page/TheSpinningReel?share"
                  target="_blank"
                  class="contact-link align-top w-inline-block">
-                <div class="contact-link_contents"><img src="../../assets/img/icon-location.svg"
+                <div class="contact-link_contents">
+                  <img src="../../assets/img/svg/icon-location.svg"
                        loading="lazy"
                        alt=""
                        class="icon-1x1-xsmall">
