--- a/spinning-reel/src/app/footer/footer.component.html
+++ b/spinning-reel/src/app/footer/footer.component.html
@@ -8,7 +8,7 @@
               <a routerLink="/home"
                  aria-current="page"
                  class="footer_logo-link w-nav-brand w--current">
-                <img src="../../assets/img/Logo.svg"
+                <img src="../../assets/img/svg/Logo.svg"
                      loading="lazy"
                      alt="Spinning Reel logo">
               </a>
@@ -19,7 +19,7 @@
                    target="_blank"
                    class="contact-link align-top w-inline-block">
                   <div class="contact-link_contents">
-                    <img src="../../assets/img/icon-location.svg"
+                    <img src="../../assets/img/svg/icon-location.svg"
                          loading="lazy"
                          alt=""
                          class="icon-1x1-xsmall">
@@ -29,7 +29,7 @@
                 <div class="footer_contact-list">
                   <a href="mailto:info@spinningreel.co.za?subject=Info"
                      class="contact-link w-inline-block">
-                    <img src="../../assets/img/email.svg"
+                    <img src="../../assets/img/svg/email.svg"
                          loading="lazy"
                          alt=""
                          class="icon-1x1-xsmall">
@@ -37,7 +37,7 @@
                   </a>
                   <a href="tel:+270466244281"
                      class="contact-link w-inline-block">
-                    <img src="../../assets/img/phone.svg"
+                    <img src="../../assets/img/svg/phone.svg"
                          loading="lazy"
                          alt=""
                          class="icon-1x1-xsmall">
