--- a/spinning-reel/src/app/header-bar/header-bar.component.html
+++ b/spinning-reel/src/app/header-bar/header-bar.component.html
@@ -4,7 +4,7 @@
          class="header_contact-wrapper">
       <a href="mailto:info@spinningreel.co.za?subject=Info"
          class="contact-link w-inline-block">
-        <img src="../../assets/img/email.svg"
+        <img src="../../assets/img/svg/email.svg"
              loading="lazy"
              alt=""
              class="icon-1x1-xsmall">
@@ -12,7 +12,7 @@
       </a>
       <a href="tel:+270466244281"
          class="contact-link w-inline-block">
-        <img src="../../assets/img/phone.svg"
+        <img src="../../assets/img/svg/phone.svg"
              loading="lazy"
              alt=""
              class="icon-1x1-xsmall">
@@ -32,7 +32,7 @@
             <a routerLink="/home"
                (click)="navToggle()"
                class="navbar_logo-link-menu w-nav-brand">
-              <img src="../../assets/img/company-logo.svg"
+              <img src="../../assets/img/svg/company-logo.svg"
                    loading="lazy"
                    alt="">
             </a>
@@ -69,11 +69,11 @@
              routerLink="/home"
              aria-current="page"
              class="navbar_logo-link w-nav-brand w--current">
-            <img src="../../assets/img/Logo-markwhite.svg"
+            <img src="../../assets/img/svg/Logo-markwhite.svg"
                  loading="lazy"
                  alt=""
                  class="navbar_logo">
-            <img src="../../assets/img/Logowhite.svg"
+            <img src="../../assets/img/svg/Logowhite.svg"
                  loading="lazy"
                  alt=""
                  class="navbar_logo">
